Fix grid gaps to be more consustent accross variants

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@400;700&family=Montserrat:wght@700&display=block");
+@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@400;700&family=Montserrat:wght@600&display=block");
 @import "vars/mixins.scss";
 @import "vars/variables.scss";
 @import "vars/colors.scss";
@@ -75,6 +75,7 @@ body {
   h4 {
     color: $color-dark-primary;
     font-family: "Montserrat", sans-serif;
+    font-weight: 400;
     &.highlight-overline {
       position: relative;
       display: inline-block;
@@ -151,7 +152,7 @@ body {
       grid-gap: 2rem;
       margin: 0;
       > * {
-        margin: 0 0 50px 0;
+        margin: 0;
       }
       @include tablet {
         grid-template-columns: repeat(auto-fill, minmax(351px, 1fr));
@@ -161,6 +162,7 @@ body {
       }
       // Increased grid column width to achieve two column
       &.x2 {
+        grid-gap: 4rem;
         @include tablet {
           grid-template-columns: 1fr 1fr;
           grid-gap: 4rem;
@@ -171,6 +173,7 @@ body {
       }
       // Increased grid column width to achieve two column
       &.x4 {
+        grid-gap: 4rem;
         @include tablet {
           grid-template-columns: 1fr 1fr 1fr 1fr;
           grid-gap: 4rem;
